CMAKE_MINIMUM_REQUIRED(VERSION 2.8.8)
PROJECT(NO_COMMENT)

IF(NOT DEFINED DEAL_II_INSTALL_DIR)
    MESSAGE(FATAL_ERROR "\n"
        "You must pass a flag -DDEAL_II_INSTALL_DIR=/path/to/your/dealii/install\n"
        "to cmake.\n"
        )
ENDIF()
IF(NOT DEFINED BOOST_INSTALL_DIR)
    MESSAGE(FATAL_ERROR "\n"
        "You must pass a flag -DBOOST_INSTALL_DIR=/path/to/your/boost/install\n"
        "to cmake.\n"
        )
ENDIF()
IF(NOT DEFINED TRILINOS_INSTALL_DIR)
    MESSAGE(FATAL_ERROR "\n"
        "You must pass a flag -DTRILINOS_INSTALL_DIR=/path/to/your/trilinos/install\n"
        "to cmake.\n"
        )
ENDIF()

FIND_PACKAGE(deal.II 8.2 REQUIRED PATHS ${DEAL_II_INSTALL_DIR} NO_DEFAULT_PATH)
INCLUDE(${DEAL_II_TARGET_CONFIG})
INCLUDE_DIRECTORIES(SYSTEM ${DEAL_II_INCLUDE_DIRS})
MESSAGE("DEAL_II_INCLUDE_DIRS = ${DEAL_II_INCLUDE_DIRS}")

FIND_PACKAGE(Trilinos 11.10 REQUIRED PATHS ${TRILINOS_INSTALL_DIR} NO_DEFAULT_PATH)
#INCLUDE_DIRECTORIES(${Trilinos_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${DataTransferKit_INCLUDE_DIRS})
MESSAGE("Trilinos_INCLUDE_DIRS = ${Trilinos_INCLUDE_DIRS}")
MESSAGE("DataTransferKit_INCLUDE_DIRS = ${DataTransferKit_INCLUDE_DIRS}")

SET(CMAKE_FIND_LIBRARY_SUFFIXES ".a;.so")
FIND_LIBRARY(Boost_LIBRARIES 
    NAMES boost_unit_test_framework
    PATHS ${BOOST_INSTALL_DIR}/lib
    NO_DEFAULT_PATH
    )
FIND_PATH(Boost_INCLUDE_DIR boost/version.hpp
    PATHS ${BOOST_INSTALL_DIR}/include
    NO_DEFAULT_PATH
    )
SET(Boost_LIBRARY_DIR ${BOOST_INSTALL_DIR}/lib)
MESSAGE("Boost_LIBRARIES = ${Boost_LIBRARIES}")
MESSAGE("Boost_INCLUDE_DIR = ${Boost_INCLUDE_DIR}")
MESSAGE("Boost_LIBRARY_DIR = ${Boost_LIBRARY_DIR}")
INCLUDE_DIRECTORIES(SYSTEM ${Boost_INCLUDE_DIR})

INCLUDE_DIRECTORIES(include)
ADD_LIBRARY(no_comment
    src/DTK_DealIIEntity.cc
    src/DTK_DealIIEntityImpl.cc
    src/DTK_DealIIEntityLocalMap.cc
    )
ENABLE_TESTING()
ADD_SUBDIRECTORY(test)
