CMAKE_MINIMUM_REQUIRED(VERSION 2.8.8)
PROJECT(NO_COMMENT)

IF(NOT DEFINED DEAL_II_INSTALL_DIR)
    MESSAGE(FATAL_ERROR "\n"
        "You must pass a flag -DDEAL_II_INSTALL_DIR=/path/to/your/dealii/install\n"
        "to cmake.\n"
        )
ENDIF()
IF(NOT DEFINED BOOST_INSTALL_DIR)
    MESSAGE(FATAL_ERROR "\n"
        "You must pass a flag -DBOOST_INSTALL_DIR=/path/to/your/boost/install\n"
        "to cmake.\n"
        )
ENDIF()
IF(NOT DEFINED TRILINOS_INSTALL_DIR)
    MESSAGE(FATAL_ERROR "\n"
        "You must pass a flag -DTRILINOS_INSTALL_DIR=/path/to/your/trilinos/install\n"
        "to cmake.\n"
        )
ENDIF()

MESSAGE("MPI_INSTALL_DIR=${MPI_INSTALL_DIR}")
SET(CMAKE_PREFIX_PATH ${CMAKE_PREFIX_PATH} ${MPI_INSTALL_DIR})

FIND_PACKAGE(MPI)
MESSAGE("MPI_CXX_COMPILER=${MPI_CXX_COMPILER}")
MESSAGE("MPIEXEC=${MPIEXEC}")
SET(CMAKE_CXX_COMPILER ${MPI_CXX_COMPILER})

FIND_PACKAGE(deal.II 8.2 REQUIRED PATHS ${DEAL_II_INSTALL_DIR} NO_DEFAULT_PATH)
INCLUDE(${DEAL_II_TARGET_CONFIG})
INCLUDE_DIRECTORIES(SYSTEM ${DEAL_II_INCLUDE_DIRS})
MESSAGE("DEAL_II_INCLUDE_DIRS = ${DEAL_II_INCLUDE_DIRS}")

FIND_PACKAGE(Trilinos 11.10 REQUIRED PATHS ${TRILINOS_INSTALL_DIR} NO_DEFAULT_PATH)
#INCLUDE_DIRECTORIES(${Trilinos_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(SYSTEM ${DataTransferKit_INCLUDE_DIRS})
MESSAGE("Trilinos_INCLUDE_DIRS = ${Trilinos_INCLUDE_DIRS}")
MESSAGE("DataTransferKit_INCLUDE_DIRS = ${DataTransferKit_INCLUDE_DIRS}")

#SET(CMAKE_FIND_LIBRARY_SUFFIXES ".a;.so")

SET(BOOST_ROOT ${BOOST_INSTALL_DIR})
SET(Boost_NO_SYSTEM_PATHS ON)
FIND_PACKAGE(Boost 1.55.0 REQUIRED
    COMPONENTS
    unit_test_framework
    mpi
    timer
    serialization
    chrono
    )
MESSAGE("Boost_LIBRARIES=${Boost_LIBRARIES}")
MESSAGE("Boost_INCLUDE_DIRS=${Boost_INCLUDE_DIRS}")
INCLUDE_DIRECTORIES(SYSTEM ${Boost_INCLUDE_DIRS})

INCLUDE_DIRECTORIES(include)
ADD_LIBRARY(no_comment
    src/DTK_DealIIEntity.cc
    src/DTK_DealIIEntityImpl.cc
    src/DTK_DealIIEntityLocalMap.cc
    src/DTK_DealIIAdjacencies.cc
    src/DTK_DealIIEntityIterator.cc
    src/DTK_DealIIEntitySet.cc
    src/DTK_DealIIEntityShapeFunction.cc
    src/DTK_DealIIField.cc
    )
#SET(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
ENABLE_TESTING()
ADD_SUBDIRECTORY(test)
